Changelog
=========

0.1-dev (unreleased)
--------------------

- Package created using templer
  [Plone Intranet Consortium]

- Make notification page
  [maartenkling]